# shor-algorithm

./: README.md  main.py  pyproject.toml
