[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
qiskit = { version = "*", extras = ["visualization"] }
qiskit-ibm-runtime = "*"

[tool.poetry.group.dev.dependencies]
qiskit = { version = "*", extras = ["visualization"] }
qiskit-ibm-runtime = "*"
ruff = "*"
